# beta-evolve

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.toml.example  example_problem.prompt  pyproject.toml  requirements.txt
examples/: sorting_evolution.c
include/: ai.h  argparse.h  beta_evolve.h  colors.h  config.h  json.h
src/: main.c
src/api/: ai.c
src/core/: config.c  conversation.c  evaluation.c  evolution.c  testing.c
src/utils/: argparse.c  colors.c  dstring.c  json.c  logging.c
templates/: index.html
tools/: server.py
