[project]
name = "beta-evolve"
version = "0.0.0"
description = "Beta Evolve Python tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
server = [
    "accelerate>=1.7.0",
    "flask>=3.1.1",
    "huggingface-hub>=0.32.3",
    "numpy>=2.2.6",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
